chore(components/Button): fix icon alignment

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -39,4 +39,9 @@
   &--rounded {
     border-radius: $radius-2xl;
   }
+
+  &__icon {
+    display: flex;
+    align-items: center;
+  }
 }
